# glacier-list

./: .gitattributes  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  MANIFEST.in  README.md  pyproject.toml  tox.ini
.github/: copilot-instructions.md
.github/workflows/: future-windows-testing.yml  publish.yml  test.yml
docs/: HATCH_MIGRATION.md  PRE_COMMIT_GUIDE.md  PYPI_CHECKLIST.md
examples/: basic_usage.py
glacier_list/: __init__.py  __main__.py  glacier_list.py  main.py
tests/: test_glacier_list.py  test_glacier_list_integration.py  test_glacier_list_pythonic.py  test_glacier_list_robustness.py  test_main.py  test_python_compatibility.py  test_pythonic_features_demo.py
