[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm[toml]>=6.2"]

[project]
name = "glacier-list"
version = "0.1.0"
authors = [
    {name = "Christensen Daniel", email = "christensen.daniel+glacierlist@outlook.com"},
]
description = "A disk-backed list implementation for handling large datasets efficiently"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    # "Programming Language :: Python :: 3.14",  # TODO: Add when released (Oct 2025)
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Topic :: Database",
    "Topic :: System :: Archiving",
]
keywords = ["disk-backed", "large-data", "chunking", "memory-efficient", "data-processing", "serialization"]
dependencies = [
    # No external dependencies - uses only standard library
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "black>=23.0",
    "flake8>=6.0",
    "mypy>=1.0",
    "pre-commit>=3.0",
    "tox>=4.0",
]
docs = [
    "sphinx>=5.0",
    "sphinx-rtd-theme>=1.0",
]
examples = [
    # Dependencies for running examples
]

[project.urls]
Homepage = "https://github.com/christensendaniel/glacier-list"
Documentation = "https://glacier-list.readthedocs.io/"
Repository = "https://github.com/christensendaniel/glacier-list.git"
"Bug Tracker" = "https://github.com/christensendaniel/glacier-list/issues"

[project.scripts]
glacier-list = "glacier_list.main:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["glacier_list*"]

[tool.black]
line-length = 88
target-version = ['py39']

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "--cov=glacier_list --cov-report=html --cov-report=term"
markers = [
    "integration: marks tests as integration tests (may be slower)",
    "glacier_list: marks tests specific to GlacierList functionality",
    "slow: marks tests as slow running",
]
