[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "glacier-list"
dynamic = ["version"]
authors = [
    {name = "Christensen Daniel", email = "christensen.daniel+glacierlist@outlook.com"},
]
description = "A disk-backed list implementation for handling large datasets efficiently"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    # "Programming Language :: Python :: 3.14",  # TODO: Add when released (Oct 2025)
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Topic :: Database",
    "Topic :: System :: Archiving",
]
keywords = ["disk-backed", "large-data", "chunking", "memory-efficient", "data-processing", "serialization"]
dependencies = [
    # No external dependencies - uses only standard library
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "black>=23.0",
    "isort>=5.0",
    "flake8>=6.0",
    "mypy>=1.0",
    "pre-commit>=3.0",
    "hatch>=1.7.0",
]
docs = [
    "sphinx>=5.0",
    "sphinx-rtd-theme>=1.0",
]
examples = [
    # Dependencies for running examples
]

[project.urls]
Homepage = "https://github.com/christensendaniel/glacier-list"
Documentation = "https://glacier-list.readthedocs.io/"
Repository = "https://github.com/christensendaniel/glacier-list.git"
"Bug Tracker" = "https://github.com/christensendaniel/glacier-list/issues"

[project.scripts]
glacier-list = "glacier_list.main:main"

# Hatch configuration
[tool.hatch.version]
path = "glacier_list/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["glacier_list"]

[tool.hatch.build.targets.sdist]
include = [
    "/glacier_list",
    "/tests",
    "/examples",
    "/docs",
    "README.md",
    "LICENSE",
    "CHANGELOG.md",
]
exclude = [
    "*.pyc",
    "__pycache__",
    ".DS_Store",
    ".pytest_cache",
    ".coverage",
    "htmlcov",
    ".git",
    ".vscode",
    ".github",
]

[tool.hatch.envs.default]
dependencies = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "black>=23.0",
    "isort>=5.0",
    "flake8>=6.0",
    "mypy>=1.0",
    "pre-commit>=3.0",
]

[tool.hatch.envs.default.scripts]
test = "pytest {args:tests}"
test-cov = "pytest --cov=glacier_list --cov-report=xml --cov-report=html --cov-report=term-missing {args:tests}"
lint = ["black --check .", "flake8 glacier_list tests", "mypy glacier_list"]
format = ["black .", "isort ."]
all = ["format", "lint", "test-cov"]

[tool.hatch.envs.test]
dependencies = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
]

[[tool.hatch.envs.test.matrix]]
python = ["3.9", "3.10", "3.11", "3.12", "3.13"]

[tool.hatch.envs.test.scripts]
run = "pytest {args:tests}"
cov = "pytest --cov=glacier_list --cov-report=xml --cov-report=html --cov-report=term-missing {args:tests}"

[tool.hatch.envs.docs]
dependencies = [
    "sphinx>=5.0",
    "sphinx-rtd-theme>=1.0",
]

[tool.hatch.envs.docs.scripts]
build = "sphinx-build -b html docs docs/_build/html"
serve = "python -m http.server 8000 --directory docs/_build/html"

[tool.setuptools.packages.find]
where = ["."]
include = ["glacier_list*"]

[tool.black]
line-length = 88
target-version = ['py39']

[tool.isort]
profile = "black"
line_length = 88
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "--cov=glacier_list --cov-report=html --cov-report=term"
markers = [
    "integration: marks tests as integration tests (may be slower)",
    "glacier_list: marks tests specific to GlacierList functionality",
    "slow: marks tests as slow running",
]
